# BTC-Algorithm

./: .gitignore  README.md  log.txt  main.py  new_study.ipynb  operation_log.txt  requirements.txt  setup.cfg  setup.py  study.ipynb  test.py  test_environment.py
data/raw/: new_BTC_data.csv
docs/: conf.py  index.rst
functions/: create_features.py  neural_network.py  prepross_data.py  update_db.py
logs/: log.txt  operation_log.txt
notebooks/: data_analysis.ipynb  new_study.ipynb
operation_control/: able_operation.py  control_center.py  operation_control_old.py  prepross_data.py  status.csv  status.txt
resources/dataset/: daily_15min.csv
resources/models/: AA_next_change_191220_15.h5  AA_next_high_191220_15.h5  AA_next_low_191220_15.h5  BA_next_high_191220_15.h5  BA_next_low_191220_15.h5  NN_next_change_171220_15.h5  NN_next_high_171220_15.h5  NN_next_low_171220_15.h5
resources/scaler/: scaler.save
src/: main.py
src/data_processing/: create_features.py  update_database.py
src/features/: check_condition.py  neural_network.py  operation_control_center.py  prepross_data.py  status.txt
src/logs/: log.txt
src/resources/dataset/: live_data_15min.csv
src/resources/models/: BA_next_change_191220_15.h5
study_notebook/: new_study.ipynb
