[metadata]
name = bitcoin-predict
version = 2.1.0
description = This application predicts the variation of Bitcoin and trade it.
author = zoddinGC
url = https://github.com/zoddinGC/
license = No License

[options]
packages = find:

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    bitcoin-predict-cli = src/main.py:main
